@@ -33,13 +33,17 @@ static char UNUSED rcsid[] = "$Id$";
 #if defined(MPI3)
 #define MPI3_CONST const
 #define MPI3_VOID_P_CAST (void *)
+#define MPI3_CHAR_P_CAST (char *)
 #define MPI3_F_INT_P_CAST (MPI_Fint *)
 #define MPI3_C_INT_P_CAST (int *)
+#define MPI3_MPI_INFO_P_CAST (MPI_Info *)
 #else
 #define MPI3_CONST
 #define MPI3_VOID_P_CAST
+#define MPI3_CHAR_P_CAST
 #define MPI3_F_INT_P_CAST
 #define MPI3_C_INT_P_CAST
+#define MPI3_MPI_INFO_P_CAST
 #endif
 
 #ifdef HAVE_STDIO_H
@@ -1839,18 +1843,18 @@ void NAME_ROUTINE_C2F(mpi_comm_split) (MPI_Fint *comm, MPI_Fint *color,
  ***  MPI_Comm_spawn
  ******************************************************************************/
 #if defined(HAVE_ALIAS_ATTRIBUTE)
-MPI_F_SYMS(mpi_comm_spawn__,mpi_comm_spawn_,MPI_COMM_SPAWN,mpi_comm_spawn,( char *command, char *argv, MPI_Fint *maxprocs, MPI_Fint *info, MPI_Fint *root, MPI_Fint *comm, MPI_Fint *intercomm, MPI_Fint *array_of_errcodes, MPI_Fint *ierror ))
+MPI_F_SYMS(mpi_comm_spawn__,mpi_comm_spawn_,MPI_COMM_SPAWN,mpi_comm_spawn,(MPI3_CONST char *command, char *argv, MPI_Fint *maxprocs, MPI_Fint *info, MPI_Fint *root, MPI_Fint *comm, MPI_Fint *intercomm, MPI_Fint *array_of_errcodes, MPI_Fint *ierror ))
 
-void NAME_ROUTINE_F(mpi_comm_spawn) (char *command, char *argv, MPI_Fint *maxprocs, MPI_Fint *info, MPI_Fint *root, MPI_Fint *comm, MPI_Fint *intercomm, MPI_Fint *array_of_errcodes, MPI_Fint *ierror)
+void NAME_ROUTINE_F(mpi_comm_spawn) (MPI3_CONST char *command, char *argv, MPI_Fint *maxprocs, MPI_Fint *info, MPI_Fint *root, MPI_Fint *comm, MPI_Fint *intercomm, MPI_Fint *array_of_errcodes, MPI_Fint *ierror)
 #else
-void NAME_ROUTINE_C2F(mpi_comm_spawn) (char *command, char *argv, MPI_Fint *maxprocs, MPI_Fint *info, MPI_Fint *root, MPI_Fint *comm, MPI_Fint *intercomm, MPI_Fint *array_of_errcodes, MPI_Fint *ierror)
+void NAME_ROUTINE_C2F(mpi_comm_spawn) (MPI3_CONST char *command, char *argv, MPI_Fint *maxprocs, MPI_Fint *info, MPI_Fint *root, MPI_Fint *comm, MPI_Fint *intercomm, MPI_Fint *array_of_errcodes, MPI_Fint *ierror)
 #endif
 {
   if (mpitrace_on)
   {
     DEBUG_INTERFACE(ENTER)
     Backend_Enter_Instrumentation (5 + (*maxprocs) + Caller_Count[CALLER_MPI]);
-    PMPI_Comm_Spawn_Wrapper (command, argv, maxprocs, info, root, comm, intercomm, array_of_errcodes, ierror);
+    PMPI_Comm_Spawn_Wrapper (MPI3_CHAR_P_CAST command, argv, maxprocs, info, root, comm, intercomm, array_of_errcodes, ierror);
     Backend_Leave_Instrumentation ();
     DEBUG_INTERFACE(LEAVE)
   }
@@ -1866,11 +1870,11 @@ void NAME_ROUTINE_C2F(mpi_comm_spawn) (char *command, char *argv, MPI_Fint *maxp
  ******************************************************************************/
 
 #if defined(HAVE_ALIAS_ATTRIBUTE)
-MPI_F_SYMS(mpi_comm_spawn_multiple__,mpi_comm_spawn_multiple_,MPI_COMM_SPAWN_MULTIPLE,mpi_comm_spawn_multiple,( MPI_Fint *count, char *array_of_commands, char *array_of_argv, MPI_Fint *array_of_maxprocs, MPI_Fint *array_of_info, MPI_Fint *root, MPI_Fint *comm, MPI_Fint *intercomm, MPI_Fint *array_of_errcodes, MPI_Fint *ierror ))
+MPI_F_SYMS(mpi_comm_spawn_multiple__,mpi_comm_spawn_multiple_,MPI_COMM_SPAWN_MULTIPLE,mpi_comm_spawn_multiple,( MPI_Fint *count, char *array_of_commands, char *array_of_argv, MPI3_CONST MPI_Fint *array_of_maxprocs, MPI3_CONST MPI_Fint *array_of_info, MPI_Fint *root, MPI_Fint *comm, MPI_Fint *intercomm, MPI_Fint *array_of_errcodes, MPI_Fint *ierror ))
 
-void NAME_ROUTINE_F(mpi_comm_spawn_multiple)   (MPI_Fint *count, char *array_of_commands, char *array_of_argv, MPI_Fint *array_of_maxprocs, MPI_Fint *array_of_info, MPI_Fint *root, MPI_Fint *comm, MPI_Fint *intercomm, MPI_Fint *array_of_errcodes, MPI_Fint *ierror)
+void NAME_ROUTINE_F(mpi_comm_spawn_multiple)   (MPI_Fint *count, char *array_of_commands, char *array_of_argv, MPI3_CONST MPI_Fint *array_of_maxprocs, MPI3_CONST MPI_Fint *array_of_info, MPI_Fint *root, MPI_Fint *comm, MPI_Fint *intercomm, MPI_Fint *array_of_errcodes, MPI_Fint *ierror)
 #else
-void NAME_ROUTINE_C2F(mpi_comm_spawn_multiple) (MPI_Fint *count, char *array_of_commands, char *array_of_argv, MPI_Fint *array_of_maxprocs, MPI_Fint *array_of_info, MPI_Fint *root, MPI_Fint *comm, MPI_Fint *intercomm, MPI_Fint *array_of_errcodes, MPI_Fint *ierror)
+void NAME_ROUTINE_C2F(mpi_comm_spawn_multiple) (MPI_Fint *count, char *array_of_commands, char *array_of_argv, MPI3_CONST MPI_Fint *array_of_maxprocs, MPI3_CONST MPI_Fint *array_of_info, MPI_Fint *root, MPI_Fint *comm, MPI_Fint *intercomm, MPI_Fint *array_of_errcodes, MPI_Fint *ierror)
 #endif
 {
   int i, n_events = 0;
@@ -1883,7 +1887,7 @@ void NAME_ROUTINE_C2F(mpi_comm_spawn_multiple) (MPI_Fint *count, char *array_of_
       n_events += 5 + array_of_maxprocs[i] + Caller_Count[CALLER_MPI];
     }
     Backend_Enter_Instrumentation (n_events);
-    PMPI_Comm_Spawn_Multiple_Wrapper (count, array_of_commands, array_of_argv, array_of_maxprocs, array_of_info, root, comm, intercomm, array_of_errcodes, ierror);
+    PMPI_Comm_Spawn_Multiple_Wrapper (count, array_of_commands, array_of_argv, MPI3_F_INT_P_CAST array_of_maxprocs, MPI3_F_INT_P_CAST array_of_info, root, comm, intercomm, array_of_errcodes, ierror);
     Backend_Leave_Instrumentation ();
     DEBUG_INTERFACE(LEAVE)
   }
@@ -4056,14 +4060,14 @@ int NAME_ROUTINE_C(MPI_Comm_split) (MPI_Comm comm, int color, int key,
  ***  MPI_Comm_spawn
  ******************************************************************************/
 int NAME_ROUTINE_C(MPI_Comm_spawn) (
-  char     *command,
-  char    **argv,
-  int       maxprocs,
-  MPI_Info  info,
-  int       root,
-  MPI_Comm  comm,
-  MPI_Comm *intercomm,
-  int      *array_of_errcodes)
+  MPI3_CONST char *command,
+  char           **argv,
+  int              maxprocs,
+  MPI_Info         info,
+  int              root,
+  MPI_Comm         comm,
+  MPI_Comm        *intercomm,
+  int             *array_of_errcodes)
 {
   int res;
 
@@ -4071,7 +4075,7 @@ int NAME_ROUTINE_C(MPI_Comm_spawn) (
   {
     DEBUG_INTERFACE(ENTER)
     Backend_Enter_Instrumentation (5 + maxprocs + Caller_Count[CALLER_MPI]);
-    res = MPI_Comm_spawn_C_Wrapper (command, argv, maxprocs, info, root, comm, intercomm, array_of_errcodes);
+    res = MPI_Comm_spawn_C_Wrapper (MPI3_CHAR_P_CAST command, argv, maxprocs, info, root, comm, intercomm, array_of_errcodes);
     Backend_Leave_Instrumentation ();
     DEBUG_INTERFACE(LEAVE)
     return res;
@@ -4087,15 +4091,15 @@ int NAME_ROUTINE_C(MPI_Comm_spawn) (
  ***  MPI_Comm_spawn_multiple
  ******************************************************************************/
 int NAME_ROUTINE_C(MPI_Comm_spawn_multiple) (
-  int       count,
-  char     *array_of_commands[],
-  char*    *array_of_argv[],
-  int       array_of_maxprocs[],
-  MPI_Info  array_of_info[],
-  int       root,
-  MPI_Comm  comm,
-  MPI_Comm *intercomm,
-  int       array_of_errcodes[])
+  int                 count,
+  char               *array_of_commands[],
+  char              **array_of_argv[],
+  MPI3_CONST int      array_of_maxprocs[],
+  MPI3_CONST MPI_Info array_of_info[],
+  int                 root,
+  MPI_Comm            comm,
+  MPI_Comm           *intercomm,
+  int                 array_of_errcodes[])
 {
   int i, n_events = 0, res;
 
@@ -4107,7 +4111,7 @@ int NAME_ROUTINE_C(MPI_Comm_spawn_multiple) (
       n_events += 5 + array_of_maxprocs[i] + Caller_Count[CALLER_MPI];
     }
     Backend_Enter_Instrumentation (n_events);
-    res = MPI_Comm_spawn_multiple_C_Wrapper (count, array_of_commands, array_of_argv, array_of_maxprocs, array_of_info, root, comm, intercomm, array_of_errcodes);
+    res = MPI_Comm_spawn_multiple_C_Wrapper (count, array_of_commands, array_of_argv, MPI3_C_INT_P_CAST array_of_maxprocs, MPI3_MPI_INFO_P_CAST array_of_info, root, comm, intercomm, array_of_errcodes);
     Backend_Leave_Instrumentation ();
     DEBUG_INTERFACE(LEAVE)
     return res;
